Wrapped text headers by breaks and spaces for long sample names Changed PDF rendering parameters Added NTC RPQC logic Added fix for values over 40.00 RPQC Changed formatting of final table Added runID to .pdf file fixed width issues

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -10,6 +10,8 @@
   align-items: center;
   justify-content: center;
   font-size: 18pt;
+  width: 100%;
+  height: 100%;
 }
 
 .Card {
@@ -23,7 +25,5 @@
   height: 50%;
   display: flex;
   align-items: flex-start;
-  box-shadow: 15px 15px 30px 0 rgba(0, 0, 0, 0.11),
-  15px 5px 15px 0 rgba(0, 0, 0, 0.08);
   box-sizing: border-box;
 }
